@@ -81,12 +81,14 @@ Version 8.37 xx-xxx-2015
     code to be compiled, leading to the error "internal error:
     previously-checked referenced subpattern not found" when an incorrect
     memory address was read. This bug was reported as "heap overflow",
-    discovered by Kai Lu of Fortinet's FortiGuard Labs.
+    discovered by Kai Lu of Fortinet's FortiGuard Labs and given the CVE number 
+    CVE-2015-2325. 
     
 23. A pattern such as "((?+1)(\1))/" containing a forward reference subroutine
     call within a group that also contained a recursive back reference caused
     incorrect code to be compiled. This bug was reported as "heap overflow",
-    discovered by Kai Lu of Fortinet's FortiGuard Labs.
+    discovered by Kai Lu of Fortinet's FortiGuard Labs, and given the CVE 
+    number CVE-2015-2326.
 
 24. Computing the size of the JIT read-only data in advance has been a source
     of various issues, and new ones are still appear unfortunately. To fix
@@ -100,6 +102,14 @@ Version 8.37 xx-xxx-2015
 
 26. Fix JIT compilation of conditional blocks, which assertion
     is converted to (*FAIL). E.g: /(?(?!))/.
+    
+27. The pattern /(?(?!)^)/ caused references to random memory. This bug was
+    discovered by the LLVM fuzzer.
+
+28. The assertion (?!) is optimized to (*FAIL). This was not handled correctly
+    when this assertion was used as a condition, for example (?(?!)a|b). In
+    pcre2_match() it worked by luck; in pcre2_dfa_match() it gave an incorrect
+    error about an unsupported item.
 
 
 Version 8.36 26-September-2014
